feat: Add deployment configuration for Railway and Vercel with Spring profiles, JWT secret generator, and deployment docs